fixed checkout button clipping through bottom of screen when scrollable

--- a/static/style.css
+++ b/static/style.css
@@ -442,6 +442,7 @@ td img.item_img{
         border-radius: 10px;
         border: none;
         margin-top: 10px;
+        margin-bottom: 145px;
         cursor: pointer;
 }
 
